Day10/hello/hello-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
     labels:
       app: hello
    spec:
      containers:
      - name: hello
        image: tektutor/spring-hello-ms:latest
        imagePullPolicy: IfNotPresent
      imagePullSecrets:
      - name: docker-pullsecret
