Day10/hello/hello-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello
